<?xml version="1.0"?>
<package format="3">
  <name>mobileye_node</name>
  <version>0.0.0</version>
  <description>Mobileye Node for ROS 2</description>
  <maintainer email="sonjunseong@todo.todo">sonjunseong</maintainer>
  <maintainer email="sonjunseong@todo.todo">shinkansan</maintainer>
  <license>Apache-2.0</license>

  <!-- Dependencias de compilación -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>can_msgs</build_depend>
  <build_depend>mobileye_msgs</build_depend>

  <!-- Dependencias de ejecución -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>can_msgs</exec_depend>
  <exec_depend>mobileye_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
